<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_num1"
            style="@style/style_KeyboardNumber"
            android:text="@string/number_1" />

        <Button
            android:id="@+id/btn_num2"
            style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
            android:text="@string/number_2" />

        <Button
            android:id="@+id/btn_num3"
            style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
            android:text="@string/number_3" />

        <Button
            android:id="@+id/btn_delete"
            style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
            android:background="@drawable/bg_keyboard_number_black_grey_delete" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyboard_number_margin"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_num4"
            style="@style/style_KeyboardNumber"
            android:text="@string/number_4" />

        <Button
			android:id="@+id/btn_num5"
			style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
			android:text="@string/number_5" />

        <Button
			android:id="@+id/btn_num6"
			style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
			android:text="@string/number_6" />

        <Button
            android:id="@+id/btn_num0"
            style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
            android:text="@string/number_0" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyboard_number_margin"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
			android:id="@+id/btn_num7"
			style="@style/style_KeyboardNumber"
			android:text="@string/number_7" />

        <Button
			android:id="@+id/btn_num8"
			style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
			android:text="@string/number_8" />
        
        <Button
			android:id="@+id/btn_num9"
			style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
			android:text="@string/number_9" />

		<Button
			android:id="@+id/btn_submit"
			style="@style/style_KeyboardNumber"
            android:layout_marginLeft="@dimen/keyboard_number_margin"
			android:text="@string/submit"
			android:textSize="@dimen/keyboard_text_size" />
         
    </LinearLayout>
</LinearLayout>